src/styles.css
@import "tailwindcss";
@import "@heroui/react/styles";
@import "@fontsource-variable/inter";

@source "../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --font-heading: var(--font-sans);
    --font-sans: 'Inter Variable', sans-serif;
    --radius: 0.125rem;
}

@layer base {
  * {
    @apply border-border;
    }
  body {
    @apply bg-background text-foreground antialiased;
    }
  html {
    @apply font-sans;
    }
}

